examples/web-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    equipo: azul
    servicio: web-frontend
    version: v1
  name: web-frontend
  namespace: azul
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    equipo: azul
    servicio: web-frontend
    version: v1
  type: LoadBalancer
