examples/web-frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: azul
  labels:
    servicio: web-frontend
    version: v1
    equipo: azul
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
